<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView24"
        style="@style/BigBoldAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_create_new_post"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        style="@style/BigBoldAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/attribute_create_news_post_title"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:hint="@string/hint_title_new_post_event_details"
        android:id="@+id/etPostTitle"
        style="@style/AttributeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:text="What kind of gift should you bring?" />

    <TextView
        android:id="@+id/textView23"
        style="@style/BigBoldAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_content_create_news_post"
        app:layout_constraintTop_toBottomOf="@id/etPostTitle" />

    <EditText
        android:hint="@string/hint_content_new_post_event_details"
        android:id="@+id/etPostContent"
        style="@style/AttributeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        tools:layout_editor_absoluteX="1dp"
        tools:text="Lorem ipsum dolor ist amet, 00000000000000
000000000000000000000000000000000000
000000000000000000000000000000000000
000000000000000000000000000000000000
00000001." />

    <Button
        android:id="@+id/btnPost"
        style="@style/DialogButtonPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPostContent" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/DialogButtonNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPostContent" />

</androidx.constraintlayout.widget.ConstraintLayout>