<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.addevent.fragment.pagerelement.detailsetter.OverviewFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddEventOverview"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_action_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbAddEventOverview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivEventPicture"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_event_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivEventPicture" />

            <TextView
                android:id="@+id/textView3"
                style="@style/SupportInformationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/overview_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                style="@style/MediumTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/overview_title_event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/tvEventName"
                style="@style/EnormousNormalAttribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView8"
                style="@style/MediumTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/overview_title_visibility"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEventName" />

            <TextView
                android:id="@+id/textView10"
                style="@style/EnormousNormalAttribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_event_visibility"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView7"
                style="@style/SupportInformationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_count_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView9"
                style="@style/SupportInformationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_auto_join_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView11"
                style="@style/MediumTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/overview_title_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView12"
                style="@style/EnormousNormalAttribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_event_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                style="@style/MediumTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/overview_title_date"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                style="@style/EnormousNormalSecondaryAttribute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_event_title_from"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView15"
                style="@style/EnormousNormalSecondaryAttribute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_event_title_to"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/tvFromDate"
                style="@style/BigNormalAttribute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_from_date"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/tvToDate"
                style="@style/BigNormalAttribute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_to_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/dateBarrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvFromDate, tvToDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView16"
                style="@style/MediumTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/overview_place_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateBarrier" />

            <TextView
                android:id="@+id/textView17"
                style="@style/EnormousNormalAttribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_event_place"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView18"
                style="@style/MediumTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/overview_title_description"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                style="@style/BigNormalAttribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_event_description"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>