<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInvitationTitle"
        style="@style/AttributeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_question_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/tvInvitationSender"
        style="@style/SupportInformationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/example_question_author"
        app:layout_constraintTop_toBottomOf="@+id/tvInvitationTitle"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/tvInvitationDescription"
        style="@style/AttributeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/example_detailed_question"
        app:layout_constraintTop_toBottomOf="@+id/tvInvitationSender"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/btnAccept"
        style="@style/DialogButtonPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/action_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInvitationDescription" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/DialogButtonNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInvitationDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>